// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshot applies custom className 1`] = `
<span
  class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-brand-primary focus:ring-offset-2 border-transparent bg-brand-primary text-brand-text-on-primary hover:bg-brand-primary/80 ml-2"
>
  Tagged
</span>
`;

exports[`Badge snapshot renders default variant 1`] = `
<span
  class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-brand-primary focus:ring-offset-2 border-transparent bg-brand-primary text-brand-text-on-primary hover:bg-brand-primary/80"
>
  New
</span>
`;

exports[`Badge snapshot renders destructive variant 1`] = `
<span
  class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-brand-primary focus:ring-offset-2 border-transparent bg-[var(--color-error)] text-[var(--color-error)]-foreground hover:bg-[var(--color-error)]/80"
>
  Error
</span>
`;

exports[`Badge snapshot renders outline variant 1`] = `
<span
  class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-brand-primary focus:ring-offset-2 text-brand-text border"
>
  Outline
</span>
`;

exports[`Badge snapshot renders secondary variant 1`] = `
<span
  class="inline-flex items-center gap-1.5 rounded-full px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-brand-primary focus:ring-offset-2 border-transparent bg-brand-surface text-brand-text hover:bg-brand-surface/80"
>
  Secondary
</span>
`;
